# python-packaging

./: README.md
c-extension/: foomodule.c  setup.py  tox.ini
c-extension/tests/: test_foo.py
flit-minimal/: pyproject.toml
flit-minimal/foo/: __init__.py
setuptools-minimal/: README.md  setup.cfg
