[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "foo"
authors = [{name = "zhanpon", email = "hello@example.com"}]
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/zhanpon/python-packaging"
